feat: show the current move on screen and refactor board to use loops to make squares, no more hardcoding

--- a/src/styles.css
+++ b/src/styles.css
@@ -88,4 +88,10 @@
   .game-info {
     margin-left: 20px;
   }
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(3, 30px);
+    grid-template-rows: repeat(3, 30px);
+  }
   
